Fix loading text: Animate dots within the text instead of separate dots

--- a/index.html
+++ b/index.html
@@ -15,12 +15,7 @@
                         <div class="loading-penguin">
                             <img src="image/RueLoading.gif" alt="Loading..." style="width: 80px; height: 80px;">
                         </div>
-                        <div class="loading-text">Thanks for your attention . . .</div>
-           <div class="loading-dots">
-               <span></span>
-               <span></span>
-               <span></span>
-           </div>
+                        <div class="loading-text">Thanks for your attention<span class="animated-dots">...</span></div>
        </div>
    </div>
 
