Update profile: Remove certifications & community sections, add SERVICE CATA section
- Removed [CERTIFICATIONS & ACHIEVEMENTS] section
- Removed [COMMUNITY & OPEN SOURCE] section
- Added new [SERVICE CATA] section with:
  * Community Management Services
  * Alpha Hunting & Research
  * DAO Consulting & Governance
- Updated CSS with pixel-style service item styling
- Added responsive design for service features
- Updated JavaScript hover effects for new section

--- a/index.html
+++ b/index.html
@@ -315,50 +315,52 @@
             </div>
         </section>
 
-        <!-- Pixel Certifications Section -->
+        <!-- Pixel Service Cata Section -->
         <section class="pixel-section">
             <div class="pixel-section-frame">
                 <div class="pixel-section-header">
-                    <h3 class="pixel-section-title">[CERTIFICATIONS & ACHIEVEMENTS]</h3>
+                    <h3 class="pixel-section-title">[SERVICE CATA]</h3>
                 </div>
-                <div class="pixel-certification-item">
-                    <h4 class="pixel-certification-name">COMMUNITY MANAGEMENT CERTIFICATION</h4>
-                    <span class="pixel-certification-issuer">DISCORD COMMUNITY</span>
-                    <span class="pixel-certification-date">2023</span>
-                </div>
-                <div class="pixel-certification-item">
-                    <h4 class="pixel-certification-name">WEB DEVELOPMENT FUNDAMENTALS</h4>
-                    <span class="pixel-certification-issuer">FREECODECAMP</span>
-                    <span class="pixel-certification-date">2024</span>
-                </div>
-                <div class="pixel-certification-item">
-                    <h4 class="pixel-certification-name">BLOCKCHAIN & WEB3 FUNDAMENTALS</h4>
-                    <span class="pixel-certification-issuer">COURSERA</span>
-                    <span class="pixel-certification-date">2023</span>
-                </div>
-            </div>
-        </section>
-
-        <!-- Pixel Community Section -->
-        <section class="pixel-section">
-            <div class="pixel-section-frame">
-                <div class="pixel-section-header">
-                    <h3 class="pixel-section-title">[COMMUNITY & OPEN SOURCE]</h3>
-                </div>
-                <div class="pixel-community-item">
-                    <h4 class="pixel-community-title">WEB3 COMMUNITY LEADER</h4>
-                    <div class="pixel-community-description">
-                        LED AND MODERATED MULTIPLE WEB3 COMMUNITIES, HELPING PROJECTS BUILD ENGAGED 
-                        USER BASES. ORGANIZED EDUCATIONAL EVENTS AND AMAS TO BRIDGE THE GAP BETWEEN 
-                        DEVELOPERS AND COMMUNITY MEMBERS.
+                <div class="pixel-service-item">
+                    <h4 class="pixel-service-title">COMMUNITY MANAGEMENT SERVICES</h4>
+                    <div class="pixel-service-description">
+                        PROFESSIONAL COMMUNITY MANAGEMENT SERVICES FOR WEB3 PROJECTS, INCLUDING DISCORD 
+                        SETUP, MODERATION, EVENT ORGANIZATION, AND STRATEGIC COMMUNITY GROWTH. EXPERTISE 
+                        IN BUILDING ENGAGED COMMUNITIES AND MANAGING LARGE-SCALE WEB3 PROJECTS.
+                    </div>
+                    <div class="pixel-service-features">
+                        <span class="pixel-service-feature">DISCORD SETUP & CONFIGURATION</span>
+                        <span class="pixel-service-feature">COMMUNITY MODERATION</span>
+                        <span class="pixel-service-feature">EVENT ORGANIZATION</span>
+                        <span class="pixel-service-feature">STRATEGIC PLANNING</span>
                     </div>
                 </div>
-                <div class="pixel-community-item">
-                    <h4 class="pixel-community-title">LEARNING & GROWTH</h4>
-                    <div class="pixel-community-description">
-                        ACTIVELY LEARNING WEB DEVELOPMENT TO EXPAND TECHNICAL SKILLS AND CONTRIBUTE 
-                        TO OPEN-SOURCE PROJECTS. SHARING KNOWLEDGE AND EXPERIENCES WITH OTHER 
-                        COMMUNITY MANAGERS AND ASPIRING DEVELOPERS.
+                <div class="pixel-service-item">
+                    <h4 class="pixel-service-title">ALPHA HUNTING & RESEARCH</h4>
+                    <div class="pixel-service-description">
+                        COMPREHENSIVE ALPHA HUNTING SERVICES FOR WEB3 PROJECTS AND INVESTMENT OPPORTUNITIES. 
+                        DEEP RESEARCH AND ANALYSIS OF EMERGING BLOCKCHAIN PROJECTS, DEFI PROTOCOLS, AND 
+                        NFT COMMUNITIES WITH PROVEN TRACK RECORD OF IDENTIFYING PROFITABLE OPPORTUNITIES.
+                    </div>
+                    <div class="pixel-service-features">
+                        <span class="pixel-service-feature">PROJECT RESEARCH</span>
+                        <span class="pixel-service-feature">MARKET ANALYSIS</span>
+                        <span class="pixel-service-feature">ALPHA CALLS</span>
+                        <span class="pixel-service-feature">RISK ASSESSMENT</span>
+                    </div>
+                </div>
+                <div class="pixel-service-item">
+                    <h4 class="pixel-service-title">DAO CONSULTING & GOVERNANCE</h4>
+                    <div class="pixel-service-description">
+                        SPECIALIZED CONSULTING SERVICES FOR DAO GOVERNANCE, COMMUNITY STRUCTURE, AND 
+                        DECENTRALIZED ORGANIZATION DEVELOPMENT. EXPERIENCE WITH MULTIPLE SUCCESSFUL DAOs 
+                        AND PROVEN EXPERTISE IN BUILDING EFFECTIVE GOVERNANCE FRAMEWORKS.
+                    </div>
+                    <div class="pixel-service-features">
+                        <span class="pixel-service-feature">GOVERNANCE DESIGN</span>
+                        <span class="pixel-service-feature">COMMUNITY STRUCTURE</span>
+                        <span class="pixel-service-feature">VOTING MECHANISMS</span>
+                        <span class="pixel-service-feature">STRATEGIC PLANNING</span>
                     </div>
                 </div>
             </div>
