Update services section: Change to 'My Services' with comprehensive blockchain development offerings
- Changed section title from [SERVICE CATA] to [MY SERVICES]
- Added GameFi Development services (P2E games, NFT integration, multichain support)
- Added DeFi Projects (staking, yield farming, liquidity pools, DAO governance)
- Added NFT & Metaverse (custom contracts, marketplace, metaverse land)
- Added Smart Contracts & Tokens (ERC20/BEP20, secure contracts, testing, audits)
- Added dApp Development (Web3.js/Ethers.js, wallet connect, dashboards)
- Added Tech Stack section (Solidity, Rust, Web3.js, React, Next.js, Tailwind, Hardhat, Truffle)
- Enhanced with emojis and detailed service descriptions

--- a/index.html
+++ b/index.html
@@ -315,52 +315,94 @@
             </div>
         </section>
 
-        <!-- Pixel Service Cata Section -->
+        <!-- Pixel My Services Section -->
         <section class="pixel-section">
             <div class="pixel-section-frame">
                 <div class="pixel-section-header">
-                    <h3 class="pixel-section-title">[SERVICE CATA]</h3>
+                    <h3 class="pixel-section-title">[MY SERVICES]</h3>
                 </div>
                 <div class="pixel-service-item">
-                    <h4 class="pixel-service-title">COMMUNITY MANAGEMENT SERVICES</h4>
+                    <h4 class="pixel-service-title">🎮 GAMEFI DEVELOPMENT</h4>
                     <div class="pixel-service-description">
-                        PROFESSIONAL COMMUNITY MANAGEMENT SERVICES FOR WEB3 PROJECTS, INCLUDING DISCORD 
-                        SETUP, MODERATION, EVENT ORGANIZATION, AND STRATEGIC COMMUNITY GROWTH. EXPERTISE 
-                        IN BUILDING ENGAGED COMMUNITIES AND MANAGING LARGE-SCALE WEB3 PROJECTS.
+                        COMPREHENSIVE GAMEFI DEVELOPMENT SERVICES INCLUDING PLAY-TO-EARN (P2E) BLOCKCHAIN 
+                        GAMES, NFT INTEGRATION FOR IN-GAME ASSETS, AND MULTICHAIN SUPPORT ACROSS ETH, BSC, 
+                        POLYGON, AND SOLANA NETWORKS.
                     </div>
                     <div class="pixel-service-features">
-                        <span class="pixel-service-feature">DISCORD SETUP & CONFIGURATION</span>
-                        <span class="pixel-service-feature">COMMUNITY MODERATION</span>
-                        <span class="pixel-service-feature">EVENT ORGANIZATION</span>
-                        <span class="pixel-service-feature">STRATEGIC PLANNING</span>
-                    </div>
-                </div>
-                <div class="pixel-service-item">
-                    <h4 class="pixel-service-title">ALPHA HUNTING & RESEARCH</h4>
-                    <div class="pixel-service-description">
-                        COMPREHENSIVE ALPHA HUNTING SERVICES FOR WEB3 PROJECTS AND INVESTMENT OPPORTUNITIES. 
-                        DEEP RESEARCH AND ANALYSIS OF EMERGING BLOCKCHAIN PROJECTS, DEFI PROTOCOLS, AND 
-                        NFT COMMUNITIES WITH PROVEN TRACK RECORD OF IDENTIFYING PROFITABLE OPPORTUNITIES.
-                    </div>
-                    <div class="pixel-service-features">
-                        <span class="pixel-service-feature">PROJECT RESEARCH</span>
-                        <span class="pixel-service-feature">MARKET ANALYSIS</span>
-                        <span class="pixel-service-feature">ALPHA CALLS</span>
-                        <span class="pixel-service-feature">RISK ASSESSMENT</span>
+                        <span class="pixel-service-feature">P2E BLOCKCHAIN GAMES</span>
+                        <span class="pixel-service-feature">NFT IN-GAME ASSETS</span>
+                        <span class="pixel-service-feature">MULTICHAIN SUPPORT</span>
+                        <span class="pixel-service-feature">GAME ECONOMICS</span>
                     </div>
                 </div>
                 <div class="pixel-service-item">
-                    <h4 class="pixel-service-title">DAO CONSULTING & GOVERNANCE</h4>
+                    <h4 class="pixel-service-title">💰 DEFI PROJECTS</h4>
                     <div class="pixel-service-description">
-                        SPECIALIZED CONSULTING SERVICES FOR DAO GOVERNANCE, COMMUNITY STRUCTURE, AND 
-                        DECENTRALIZED ORGANIZATION DEVELOPMENT. EXPERIENCE WITH MULTIPLE SUCCESSFUL DAOs 
-                        AND PROVEN EXPERTISE IN BUILDING EFFECTIVE GOVERNANCE FRAMEWORKS.
+                        PROFESSIONAL DEFI DEVELOPMENT SERVICES INCLUDING STAKING & YIELD FARMING CONTRACTS, 
+                        LIQUIDITY POOLS & TOKEN SWAP (AMM) SYSTEMS, AND COMPLETE DAO GOVERNANCE SETUP 
+                        FOR DECENTRALIZED FINANCE APPLICATIONS.
                     </div>
                     <div class="pixel-service-features">
-                        <span class="pixel-service-feature">GOVERNANCE DESIGN</span>
-                        <span class="pixel-service-feature">COMMUNITY STRUCTURE</span>
-                        <span class="pixel-service-feature">VOTING MECHANISMS</span>
-                        <span class="pixel-service-feature">STRATEGIC PLANNING</span>
+                        <span class="pixel-service-feature">STAKING & YIELD FARMING</span>
+                        <span class="pixel-service-feature">LIQUIDITY POOLS</span>
+                        <span class="pixel-service-feature">TOKEN SWAP (AMM)</span>
+                        <span class="pixel-service-feature">DAO GOVERNANCE</span>
+                    </div>
+                </div>
+                <div class="pixel-service-item">
+                    <h4 class="pixel-service-title">🎨 NFT & METAVERSE</h4>
+                    <div class="pixel-service-description">
+                        SPECIALIZED NFT AND METAVERSE DEVELOPMENT SERVICES INCLUDING CUSTOM NFT SMART 
+                        CONTRACTS (ERC721/ERC1155), NFT MARKETPLACE DEVELOPMENT, AND METAVERSE LAND / 
+                        IN-GAME NFT INTEGRATION FOR IMMERSIVE DIGITAL EXPERIENCES.
+                    </div>
+                    <div class="pixel-service-features">
+                        <span class="pixel-service-feature">CUSTOM NFT CONTRACTS</span>
+                        <span class="pixel-service-feature">NFT MARKETPLACE</span>
+                        <span class="pixel-service-feature">METAVERSE LAND</span>
+                        <span class="pixel-service-feature">IN-GAME NFT INTEGRATION</span>
+                    </div>
+                </div>
+                <div class="pixel-service-item">
+                    <h4 class="pixel-service-title">⚡ SMART CONTRACTS & TOKENS</h4>
+                    <div class="pixel-service-description">
+                        SECURE AND OPTIMIZED SMART CONTRACT DEVELOPMENT INCLUDING ERC20 / BEP20 TOKEN 
+                        CREATION, COMPREHENSIVE CONTRACT TESTING & AUDIT SERVICES, AND GAS-OPTIMIZED 
+                        IMPLEMENTATIONS FOR MAXIMUM EFFICIENCY AND SECURITY.
+                    </div>
+                    <div class="pixel-service-features">
+                        <span class="pixel-service-feature">ERC20 / BEP20 TOKENS</span>
+                        <span class="pixel-service-feature">SECURE CONTRACTS</span>
+                        <span class="pixel-service-feature">CONTRACT TESTING</span>
+                        <span class="pixel-service-feature">AUDIT SERVICES</span>
+                    </div>
+                </div>
+                <div class="pixel-service-item">
+                    <h4 class="pixel-service-title">🌐 DAPP DEVELOPMENT</h4>
+                    <div class="pixel-service-description">
+                        FULL-STACK DAPP DEVELOPMENT SERVICES INCLUDING WEB3.JS / ETHERS.JS INTEGRATION, 
+                        WALLET CONNECT (METAMASK, WALLETCONNECT) IMPLEMENTATION, AND USER-FRIENDLY 
+                        DASHBOARDS FOR SEAMLESS BLOCKCHAIN INTERACTIONS.
+                    </div>
+                    <div class="pixel-service-features">
+                        <span class="pixel-service-feature">WEB3.JS / ETHERS.JS</span>
+                        <span class="pixel-service-feature">WALLET CONNECT</span>
+                        <span class="pixel-service-feature">USER DASHBOARDS</span>
+                        <span class="pixel-service-feature">BLOCKCHAIN INTEGRATION</span>
+                    </div>
+                </div>
+                <div class="pixel-service-item">
+                    <h4 class="pixel-service-title">🛠 TECH STACK</h4>
+                    <div class="pixel-service-description">
+                        COMPREHENSIVE TECHNICAL EXPERTISE ACROSS MODERN BLOCKCHAIN AND WEB DEVELOPMENT 
+                        TECHNOLOGIES INCLUDING SOLIDITY, RUST, WEB3.JS, ETHERS.JS, REACT, NEXT.JS, 
+                        TAILWIND, HARDHAT, AND TRUFFLE FOR COMPLETE DEVELOPMENT SOLUTIONS.
+                    </div>
+                    <div class="pixel-service-features">
+                        <span class="pixel-service-feature">SOLIDITY, RUST</span>
+                        <span class="pixel-service-feature">WEB3.JS, ETHERS.JS</span>
+                        <span class="pixel-service-feature">REACT, NEXT.JS, TAILWIND</span>
+                        <span class="pixel-service-feature">HARDHAT, TRUFFLE</span>
                     </div>
                 </div>
             </div>
