Update header stats: Change to part-time trader and add full stack dev
- Changed 'FULL-TIME TRADER' to 'PART-TIME TRADER'
- Added 'FULL STACK DEV' to header stats
- Updated professional identity to reflect current focus on development

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                         <div class="pixel-stats">
                             <div class="pixel-stat">• CORE TEAM @ TITANDAO</div>
                             <div class="pixel-stat">• CO-FOUNDER @ PIXELIZEDAO</div>
-                            <div class="pixel-stat">• FULL-TIME TRADER</div>
+                            <div class="pixel-stat">• PART-TIME TRADER</div>
+                            <div class="pixel-stat">• FULL STACK DEV</div>
                         </div>
                     </div>
                 </div>
