Update professional summary to reflect full-stack development focus
- Updated summary to highlight full-stack developer expertise
- Changed from 'FULL-TIME FUTURES TRADER' to 'PART-TIME TRADER'
- Added blockchain development specializations (GameFi, DeFi, NFT, Smart Contracts, dApp)
- Included technical expertise (Solidity, Rust, Web3.js, React, multichain integration)
- Emphasized comprehensive blockchain solutions delivery
- Aligned summary with current service offerings and professional identity

--- a/index.html
+++ b/index.html
@@ -84,13 +84,14 @@
                 </div>
                 <div class="pixel-summary-box">
                     <p class="pixel-summary">
-                        EXPERIENCED WEB3 PROFESSIONAL WITH 3+ YEARS AS A COLLABORATION MANAGER, 
-                        ADMINISTRATOR, MODERATOR, AND ALPHA HUNTER ACROSS 13+ DAOs. CORE TEAM 
-                        MEMBER AT TITANDAO AND CO-FOUNDER AT PIXELIZEDAO. FULL-TIME FUTURES 
-                        TRADER WITH DEEP UNDERSTANDING OF MARKET DYNAMICS. CURRENTLY EXPANDING 
-                        SKILLSET THROUGH CODING AND WEB DEVELOPMENT. PROVEN TRACK RECORD OF 
-                        BUILDING ENGAGED COMMUNITIES, MANAGING LARGE-SCALE EVENTS, AND IDENTIFYING 
-                        PROFITABLE OPPORTUNITIES IN THE WEB3 ECOSYSTEM.
+                        EXPERIENCED WEB3 PROFESSIONAL AND FULL-STACK DEVELOPER WITH 3+ YEARS AS A 
+                        COLLABORATION MANAGER, ADMINISTRATOR, MODERATOR, AND ALPHA HUNTER ACROSS 13+ DAOs. 
+                        CORE TEAM MEMBER AT TITANDAO AND CO-FOUNDER AT PIXELIZEDAO. PART-TIME TRADER 
+                        WITH DEEP UNDERSTANDING OF MARKET DYNAMICS. SPECIALIZED IN BLOCKCHAIN DEVELOPMENT 
+                        INCLUDING GAMEFI, DEFI, NFT, SMART CONTRACTS, AND DAPP DEVELOPMENT. EXPERTISE IN 
+                        SOLIDITY, RUST, WEB3.JS, REACT, AND MULTICHAIN INTEGRATION. PROVEN TRACK RECORD OF 
+                        BUILDING ENGAGED COMMUNITIES, MANAGING LARGE-SCALE EVENTS, AND DELIVERING 
+                        COMPREHENSIVE BLOCKCHAIN SOLUTIONS FOR WEB3 PROJECTS.
                     </p>
                 </div>
             </div>
