Comprehensive portfolio update: Align all sections with full-stack development focus
MAJOR UPDATES:
- Updated main title: 'COMMUNITY MANAGER & ALPHA HUNTER' → 'FULL-STACK DEVELOPER & WEB3 SPECIALIST'
- Updated trading role: 'FULL-TIME FUTURES TRADER' → 'PART-TIME TRADER'
- Updated development role: 'WEB DEVELOPMENT STUDENT' → 'FULL-STACK DEVELOPER'
- Enhanced technical skills: Added blockchain development section, removed 'LEARNING' labels
- Updated projects: Added blockchain development projects, enhanced portfolio description

CONSISTENCY IMPROVEMENTS:
- All sections now reflect current full-stack development expertise
- Professional identity consistently presents as blockchain developer
- Skills section matches service offerings in MY SERVICES
- Experience section aligns with professional summary
- Projects showcase current development capabilities

RESULT: Cohesive professional identity as full-stack blockchain developer

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div class="pixel-name-section">
                         <h1 class="pixel-name">RUE</h1>
                         <div class="pixel-title-frame">
-                            <h2 class="pixel-title">COMMUNITY MANAGER & ALPHA HUNTER</h2>
+                            <h2 class="pixel-title">FULL-STACK DEVELOPER & WEB3 SPECIALIST</h2>
                         </div>
                         <div class="pixel-stats">
                             <div class="pixel-stat">• CORE TEAM @ TITANDAO</div>
@@ -168,7 +168,7 @@
 
                 <div class="pixel-experience-item">
                     <div class="pixel-job-header">
-                        <h4 class="pixel-job-title">FULL-TIME FUTURES TRADER</h4>
+                        <h4 class="pixel-job-title">PART-TIME TRADER</h4>
                         <div class="pixel-company-info">
                             <span class="pixel-company">SELF-EMPLOYED</span>
                             <span class="pixel-date">2022 - PRESENT</span>
@@ -185,17 +185,17 @@
 
                 <div class="pixel-experience-item">
                     <div class="pixel-job-header">
-                        <h4 class="pixel-job-title">WEB DEVELOPMENT STUDENT</h4>
+                        <h4 class="pixel-job-title">FULL-STACK DEVELOPER</h4>
                         <div class="pixel-company-info">
-                            <span class="pixel-company">SELF-LEARNING</span>
+                            <span class="pixel-company">FREELANCE</span>
                             <span class="pixel-date">2024 - PRESENT</span>
                         </div>
                     </div>
                     <div class="pixel-achievements">
-                        <div class="pixel-achievement">• CURRENTLY LEARNING HTML, CSS, JAVASCRIPT, AND MODERN WEB DEVELOPMENT FRAMEWORKS</div>
-                        <div class="pixel-achievement">• BUILDING PERSONAL PROJECTS TO DEVELOP PRACTICAL CODING SKILLS</div>
-                        <div class="pixel-achievement">• STUDYING REACT, NODE.JS, AND WEB3 INTEGRATION FOR FUTURE DEVELOPMENT WORK</div>
-                        <div class="pixel-achievement">• CONTRIBUTING TO OPEN-SOURCE PROJECTS AND COLLABORATING WITH OTHER DEVELOPERS</div>
+                        <div class="pixel-achievement">• DEVELOP FULL-STACK WEB APPLICATIONS USING REACT, NEXT.JS, AND MODERN FRAMEWORKS</div>
+                        <div class="pixel-achievement">• BUILD BLOCKCHAIN INTEGRATIONS WITH WEB3.JS, ETHERS.JS, AND SMART CONTRACT INTERACTIONS</div>
+                        <div class="pixel-achievement">• CREATE RESPONSIVE USER INTERFACES WITH TAILWIND CSS AND MODERN DESIGN PRINCIPLES</div>
+                        <div class="pixel-achievement">• IMPLEMENT SECURE SMART CONTRACTS IN SOLIDITY AND RUST FOR VARIOUS BLOCKCHAIN NETWORKS</div>
                     </div>
                 </div>
             </div>
@@ -239,17 +239,31 @@
                         </div>
                     </div>
                     <div class="pixel-skill-category">
-                        <h4 class="pixel-skill-title">WEB DEVELOPMENT (LEARNING)</h4>
+                        <h4 class="pixel-skill-title">BLOCKCHAIN DEVELOPMENT</h4>
                         <div class="pixel-skill-tags">
-                            <span class="pixel-skill-tag">HTML</span>
-                            <span class="pixel-skill-tag">CSS</span>
+                            <span class="pixel-skill-tag">SOLIDITY</span>
+                            <span class="pixel-skill-tag">RUST</span>
+                            <span class="pixel-skill-tag">WEB3.JS</span>
+                            <span class="pixel-skill-tag">ETHERS.JS</span>
+                            <span class="pixel-skill-tag">SMART CONTRACTS</span>
+                            <span class="pixel-skill-tag">DEFI PROTOCOLS</span>
+                            <span class="pixel-skill-tag">NFT DEVELOPMENT</span>
+                            <span class="pixel-skill-tag">GAMEFI</span>
+                            <span class="pixel-skill-tag">MULTICHAIN</span>
+                        </div>
+                    </div>
+                    <div class="pixel-skill-category">
+                        <h4 class="pixel-skill-title">WEB DEVELOPMENT</h4>
+                        <div class="pixel-skill-tags">
+                            <span class="pixel-skill-tag">REACT</span>
+                            <span class="pixel-skill-tag">NEXT.JS</span>
+                            <span class="pixel-skill-tag">TAILWIND CSS</span>
                             <span class="pixel-skill-tag">JAVASCRIPT</span>
-                            <span class="pixel-skill-tag">REACT (LEARNING)</span>
-                            <span class="pixel-skill-tag">NODE.JS (LEARNING)</span>
+                            <span class="pixel-skill-tag">HTML/CSS</span>
+                            <span class="pixel-skill-tag">NODE.JS</span>
                             <span class="pixel-skill-tag">GIT</span>
-                            <span class="pixel-skill-tag">GITHUB</span>
-                            <span class="pixel-skill-tag">VS CODE</span>
-                            <span class="pixel-skill-tag">WEB3 INTEGRATION</span>
+                            <span class="pixel-skill-tag">HARDHAT</span>
+                            <span class="pixel-skill-tag">TRUFFLE</span>
                         </div>
                     </div>
                     <div class="pixel-skill-category">
@@ -292,26 +306,26 @@
                 <div class="pixel-project-item">
                     <div class="pixel-project-header">
                         <h4 class="pixel-project-title">PERSONAL PORTFOLIO WEBSITE</h4>
-                        <span class="pixel-project-tech">HTML, CSS, JAVASCRIPT</span>
+                        <span class="pixel-project-tech">HTML, CSS, JAVASCRIPT, PIXEL ART DESIGN</span>
                     </div>
                     <div class="pixel-project-description">
-                        BUILT A RESPONSIVE PERSONAL PORTFOLIO WEBSITE SHOWCASING COMMUNITY MANAGEMENT 
-                        EXPERIENCE AND CURRENT LEARNING PROGRESS IN WEB DEVELOPMENT. IMPLEMENTED 
-                        MODERN DESIGN PRINCIPLES AND INTERACTIVE FEATURES. RESULT: CREATED PROFESSIONAL 
-                        ONLINE PRESENCE AND DEMONSTRATED CODING SKILLS.
+                        DEVELOPED A RESPONSIVE PERSONAL PORTFOLIO WEBSITE WITH PIXEL ART AESTHETIC AND 
+                        INTERACTIVE FEATURES. IMPLEMENTED MODERN DESIGN PRINCIPLES, SMOOTH ANIMATIONS, 
+                        AND COMPREHENSIVE BLOCKCHAIN DEVELOPMENT SERVICES SHOWCASE. RESULT: PROFESSIONAL 
+                        ONLINE PRESENCE DEMONSTRATING FULL-STACK DEVELOPMENT CAPABILITIES.
                     </div>
                 </div>
 
                 <div class="pixel-project-item">
                     <div class="pixel-project-header">
-                        <h4 class="pixel-project-title">DISCORD BOT DEVELOPMENT (LEARNING)</h4>
-                        <span class="pixel-project-tech">JAVASCRIPT, DISCORD.JS, NODE.JS</span>
+                        <h4 class="pixel-project-title">BLOCKCHAIN DEVELOPMENT PROJECTS</h4>
+                        <span class="pixel-project-tech">SOLIDITY, WEB3.JS, REACT, SMART CONTRACTS</span>
                     </div>
                     <div class="pixel-project-description">
-                        CURRENTLY LEARNING TO DEVELOP DISCORD BOTS FOR COMMUNITY AUTOMATION AND 
-                        MODERATION. STUDYING JAVASCRIPT AND NODE.JS TO CREATE USEFUL TOOLS FOR 
-                        WEB3 COMMUNITIES. GOAL: COMBINE COMMUNITY MANAGEMENT EXPERTISE WITH 
-                        TECHNICAL DEVELOPMENT SKILLS.
+                        DEVELOPING COMPREHENSIVE BLOCKCHAIN SOLUTIONS INCLUDING DEFI PROTOCOLS, NFT 
+                        MARKETPLACES, AND GAMEFI APPLICATIONS. IMPLEMENTING SECURE SMART CONTRACTS, 
+                        MULTICHAIN INTEGRATIONS, AND USER-FRIENDLY DAPPS. COMBINING COMMUNITY MANAGEMENT 
+                        EXPERTISE WITH TECHNICAL DEVELOPMENT SKILLS FOR COMPLETE WEB3 SOLUTIONS.
                     </div>
                 </div>
             </div>
