Update main title to 'WEB3 SPECIALIST'
- Changed title from 'FULL-STACK DEVELOPER & WEB3 SPECIALIST' to 'WEB3 SPECIALIST'
- Simplified and focused title on core Web3 expertise
- Maintains professional identity while being more concise

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div class="pixel-name-section">
                         <h1 class="pixel-name">RUE</h1>
                         <div class="pixel-title-frame">
-                            <h2 class="pixel-title">FULL-STACK DEVELOPER & WEB3 SPECIALIST</h2>
+                            <h2 class="pixel-title">WEB3 SPECIALIST</h2>
                         </div>
                         <div class="pixel-stats">
                             <div class="pixel-stat">• CORE TEAM @ TITANDAO</div>
