Update header stat: Add 'INTERN' to full stack dev role
- Changed 'FULL STACK DEV' to 'FULL STACK DEV - INTERN' in header stats
- Reflects current learning and development phase
- Maintains professional honesty about experience level

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <div class="pixel-stat">• CORE TEAM @ TITANDAO</div>
                             <div class="pixel-stat">• CO-FOUNDER @ PIXELIZEDAO</div>
                             <div class="pixel-stat">• PART-TIME TRADER</div>
-                            <div class="pixel-stat">• FULL STACK DEV</div>
+                            <div class="pixel-stat">• FULL STACK DEV - INTERN</div>
                         </div>
                     </div>
                 </div>
